Fix firefox flexbox  layout bug with vertical margin

--- a/src/styles/components/_job-list.scss
+++ b/src/styles/components/_job-list.scss
@@ -10,7 +10,7 @@
     display: block;
     vertical-align: top;
     width: 100%;
-    margin: 0 3% 3% 0;
+    margin: 0 3% 3vw 0;
     text-align: left;
   }
 
